changement des coeur simple icone en coeur checkbox + minor improvment

--- a/sass/composants/menuCard.scss
+++ b/sass/composants/menuCard.scss
@@ -38,9 +38,7 @@
         }
         &__prix {
             padding: 0.5rem;
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-end;
+            @include flexbox(flex-end, flex-end, nowrap);
             margin-left: auto;
         }
         &__check {
