--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ Solid one is hidden until user hover or active the regular one */
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   animation: loader-disapear 3s ease-in-out;
   background-color: rgb(227, 226, 226);
   z-index: -1;
@@ -96,11 +97,13 @@ Solid one is hidden until user hover or active the regular one */
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .loader__icone--hidden {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: nowrap;
   animation: loader-scroll 3s ease-in-out both;
 }
 .loader__icone--hidden .fa-solid {
@@ -124,7 +127,9 @@ Solid one is hidden until user hover or active the regular one */
   /*Header for the menu pages*/
   width: 100%;
   display: flex;
+  justify-content: flex-start;
   align-items: center;
+  flex-wrap: nowrap;
 }
 .header--menu i {
   display: block;
@@ -180,13 +185,15 @@ Solid one is hidden until user hover or active the regular one */
   box-shadow: 0 5px 20px -2px black;
 }
 
+/*File containing SCSS used for the layout of the 3 card explaining how this website works*/
 .fonctionnement {
   width: 100%;
   margin: 2rem 0;
   display: flex;
-  column-gap: 2vw;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 2vw;
 }
 .fonctionnement a {
   color: black;
@@ -244,28 +251,26 @@ Solid one is hidden until user hover or active the regular one */
   }
 }
 
+/*Fil gathering SCSS for restaurant's section on the home page 
+it allow a flex disposition with wrap for the restaurant card and also allow to add the "new" green div if needed*/
 .restaurant {
   width: 100%;
   background-color: rgb(238, 237, 237);
   padding-bottom: 2rem;
+  column-gap: 2rem;
+  row-gap: 2rem;
   display: flex;
-  column-gap: 2vw;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 .restaurant a {
   color: black;
   text-decoration: none;
 }
-.restaurant a {
-  width: 45%;
-}
 @media (max-width: 620px) {
   .restaurant {
     display: block;
-  }
-  .restaurant a {
-    width: 100%;
   }
 }
 .restaurant h2 {
@@ -279,13 +284,83 @@ Solid one is hidden until user hover or active the regular one */
     text-align: left;
   }
 }
-.restaurant__vignette {
-  margin: 0 1rem 2rem 1rem;
+.restaurant .restaurant__card {
+  position: relative;
+}
+.restaurant .custom-checkbox {
+  position: absolute;
+  top: 82%;
+  right: 10px;
+}
+.restaurant .custom-checkbox input[type=checkbox] {
+  position: absolute;
+  top: 82%;
+  right: 10px;
+  width: 1.5rem;
+  height: 1.5rem;
+  opacity: 0;
+}
+.restaurant .custom-checkbox input[type=checkbox]:checked ~ .fa-solid {
+  opacity: 1;
+}
+.restaurant .custom-checkbox input[type=checkbox]:checked ~ .fa-regular {
+  opacity: 0;
+}
+.restaurant .fa-solid {
+  opacity: 0;
+  position: absolute;
+  top: 82%;
+  right: 10px;
+  font-size: 1.5rem;
+  z-index: 0;
+  background: -webkit-linear-gradient(#9356dc, #ff79da);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+@media (max-width: 620px) {
+  .restaurant .fa-solid {
+    font-size: 1.5rem;
+  }
+}
+.restaurant .fa-regular {
+  position: absolute;
+  top: 82%;
+  right: 10px;
+  font-size: 1.5rem;
+  z-index: 1;
+}
+@media (max-width: 620px) {
+  .restaurant .fa-regular {
+    font-size: 1.5rem;
+  }
+}
+.restaurant__card {
+  width: 40%;
+}
+.restaurant__card a {
+  display: block;
+  width: 100%;
+}
+@media (max-width: 620px) {
+  .restaurant__card a {
+    width: 100%;
+    margin: auto;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 620px) {
+  .restaurant__card {
+    width: 90%;
+    margin: auto;
+    margin-bottom: 2rem;
+  }
+}
+.restaurant__link {
   border-radius: 15px;
   box-shadow: 0 0 10px grey;
   position: relative;
 }
-.restaurant__vignette span {
+.restaurant__link span {
   /*Allow to put a "new" pop-up on the restaurant card, need to add <span>Nouveau</span> just below the image in HTML*/
   padding: 2px 4px;
   position: absolute;
@@ -295,7 +370,7 @@ Solid one is hidden until user hover or active the regular one */
   background-color: #99e2d0;
   border-radius: 5px;
 }
-.restaurant__vignette img {
+.restaurant__link img {
   width: 100%;
   height: 180px;
   object-fit: cover;
@@ -303,68 +378,17 @@ Solid one is hidden until user hover or active the regular one */
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
-.restaurant__vignette__details {
+.restaurant__details {
   position: relative;
 }
-.restaurant__vignette__details h3 {
+.restaurant__details h3 {
   padding: 0.4rem 0 0.3rem 0.7rem;
 }
-.restaurant__vignette__details p {
+.restaurant__details p {
   padding: 0 0 0.5rem 0.7rem;
 }
-.restaurant__vignette__details h1 {
-  position: relative;
-}
-.restaurant__vignette__details .fa-solid {
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  right: 30px;
-  transform: translateY(-50%);
-  font-size: 1.5rem;
-  z-index: 0;
-}
-@media (max-width: 620px) {
-  .restaurant__vignette__details .fa-solid {
-    font-size: 1.5rem;
-  }
-}
-.restaurant__vignette__details .fa-regular {
-  position: absolute;
-  top: 50%;
-  right: 30px;
-  transform: translateY(-50%);
-  font-size: 1.5rem;
-  z-index: 1;
-}
-.restaurant__vignette__details .fa-regular:hover + .fa-solid {
-  /*Hover on regular heart that make the solid appears. Solide one is colored with a gradient of primary and secondary color*/
-  opacity: 1;
-  transition: opacity 500ms;
-  background: -webkit-linear-gradient(#9356dc, #ff79da);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.restaurant__vignette__details .fa-regular:hover {
-  /*to make regular heart disapear*/
-  opacity: 0;
-  transition: opacity 500ms;
-}
-@media (max-width: 620px) {
-  .restaurant__vignette__details .fa-regular {
-    font-size: 1.5rem;
-  }
-  .restaurant__vignette__details .fa-regular:active + .fa-solid {
-    display: block;
-    background: -webkit-linear-gradient(#9356dc, #ff79da);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .restaurant__vignette__details .fa-regular:active {
-    opacity: 0;
-  }
-}
 
+/*file dedicated to the layout of the photo for the menu pages*/
 .photo-restaurant {
   display: block;
   width: 80%;
@@ -383,9 +407,11 @@ Solid one is hidden until user hover or active the regular one */
 /*This file contain SCSS rules for the layout of menu part */
 .menu__part {
   display: flex;
-  column-gap: 2vw;
-  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  column-gap: 2vw;
 }
 .menu__part a {
   color: black;
@@ -427,7 +453,7 @@ Solid one is hidden until user hover or active the regular one */
   }
 }
 .menu__part a {
-  width: 40%;
+  width: 60%;
 }
 .menu__part h2 {
   width: 100%;
@@ -505,6 +531,7 @@ Solid one is hidden until user hover or active the regular one */
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  flex-wrap: nowrap;
   margin-left: auto;
 }
 .menu__vignette__check {
@@ -556,17 +583,41 @@ for the layout of the menu for each restaurant*/
     font-size: 1.5rem;
   }
 }
-.menu h1 {
+.menu .menu__title {
   position: relative;
+}
+.menu .custom-checkbox {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+}
+.menu .custom-checkbox input[type=checkbox] {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  width: 1.5rem;
+  height: 1.5rem;
+  opacity: 0;
+}
+.menu .custom-checkbox input[type=checkbox]:checked ~ .fa-solid {
+  opacity: 1;
+}
+.menu .custom-checkbox input[type=checkbox]:checked ~ .fa-regular {
+  opacity: 0;
 }
 .menu .fa-solid {
   opacity: 0;
   position: absolute;
   top: 50%;
-  right: 30px;
+  right: 10px;
   transform: translateY(-50%);
   font-size: 4vw;
   z-index: 0;
+  background: -webkit-linear-gradient(#9356dc, #ff79da);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 @media (max-width: 620px) {
   .menu .fa-solid {
@@ -576,36 +627,14 @@ for the layout of the menu for each restaurant*/
 .menu .fa-regular {
   position: absolute;
   top: 50%;
-  right: 30px;
+  right: 10px;
   transform: translateY(-50%);
   font-size: 4vw;
   z-index: 1;
 }
-.menu .fa-regular:hover + .fa-solid {
-  /*Hover on regular heart that make the solid appears. Solide one is colored with a gradient of primary and secondary color*/
-  opacity: 1;
-  transition: opacity 500ms;
-  background: -webkit-linear-gradient(#9356dc, #ff79da);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.menu .fa-regular:hover {
-  /*to make regular heart disapear*/
-  opacity: 0;
-  transition: opacity 500ms;
-}
 @media (max-width: 620px) {
   .menu .fa-regular {
     font-size: 1.5rem;
-  }
-  .menu .fa-regular:active + .fa-solid {
-    display: block;
-    background: -webkit-linear-gradient(#9356dc, #ff79da);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-  .menu .fa-regular:active {
-    opacity: 0;
   }
 }
 .menu__button {
@@ -633,10 +662,10 @@ footer {
   background-color: rgb(52, 51, 51);
   padding: 1rem;
   display: flex;
-  column-gap: 2vw;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  column-gap: 2vw;
 }
 footer a {
   color: black;
