--- a/sass/layout/loader.scss
+++ b/sass/layout/loader.scss
@@ -6,9 +6,7 @@
     transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox;
     animation: loader-disapear 3s ease-in-out;
     background-color: $localisation__ville-color;
     z-index: -1;
@@ -19,14 +17,10 @@
         border-radius: 50%;
         border: solid 1px $primary-color;
         overflow: hidden;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flexbox;
     }
     &__icone--hidden {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flexbox(center, center, nowrap);
         animation: loader-scroll 3s ease-in-out both;
         .fa-solid {
             color: $primary-color;
