--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -39,18 +39,91 @@
 
 /*Mixin related to the position of the 2 hearts on card restaurant on the main page and also on the menu page
 Solid one is hidden until user hover or active the regular one */
-@mixin heart-placement($fontsize-destktop: 1.5rem, $fontsize-mobile: 1.5rem) {
-    h1 {
+@mixin heart-placement--homepage($fontsize-destktop: 1.5rem, $fontsize-mobile: 1.5rem) {
+    .restaurant__card {
         position: relative;
+    }
+    .custom-checkbox {
+        position: absolute;
+        top: 82%;
+        right: 10px;
+    }
+    .custom-checkbox input[type="checkbox"] {
+        position: absolute;
+        top: 82%;
+        right: 10px;
+        width: 1.5rem;
+        height: 1.5rem;
+        opacity: 0;
+        &:checked ~ .fa-solid {
+            opacity: 1;
+        }
+        &:checked ~ .fa-regular {
+            opacity: 0;
+        }
+    }
+    .fa-solid {
+        opacity: 0;
+        position: absolute;
+        top: 82%;
+        right: 10px;
+        font-size: $fontsize-destktop;
+        z-index: 0;
+        background: -webkit-linear-gradient($primary-color, $secondary-color);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        @media (max-width: 620px) {
+            font-size: $fontsize-mobile;
+        }
+    }
+    .fa-regular {
+        position: absolute;
+        top: 82%;
+        right: 10px;
+        font-size: $fontsize-destktop;
+        z-index: 1;
+        @media (max-width: 620px) {
+            font-size: $fontsize-mobile;
+        }
+    }
+}
+
+@mixin heart-placement--menupage($fontsize-destktop: 1.5rem, $fontsize-mobile: 1.5rem) {
+    .menu__title {
+        position: relative;
+    }
+    .custom-checkbox {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+    }
+    .custom-checkbox input[type="checkbox"] {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+        width: 1.5rem;
+        height: 1.5rem;
+        opacity: 0;
+        &:checked ~ .fa-solid {
+            opacity: 1;
+        }
+        &:checked ~ .fa-regular {
+            opacity: 0;
+        }
     }
     .fa-solid {
         opacity: 0;
         position: absolute;
         top: 50%;
-        right: 30px;
+        right: 10px;
         transform: translateY(-50%);
         font-size: $fontsize-destktop;
         z-index: 0;
+        background: -webkit-linear-gradient($primary-color, $secondary-color);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         @media (max-width: 620px) {
             font-size: $fontsize-mobile;
         }
@@ -58,34 +131,19 @@ Solid one is hidden until user hover or active the regular one */
     .fa-regular {
         position: absolute;
         top: 50%;
-        right: 30px;
+        right: 10px;
         transform: translateY(-50%);
         font-size: $fontsize-destktop;
         z-index: 1;
-        &:hover + .fa-solid {
-            /*Hover on regular heart that make the solid appears. Solide one is colored with a gradient of primary and secondary color*/
-            opacity: 1;
-            transition: opacity 500ms;
-            background: -webkit-linear-gradient($primary-color, $secondary-color);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        &:hover {
-            /*to make regular heart disapear*/
-            opacity: 0;
-            transition: opacity 500ms;
-        }
         @media (max-width: 620px) {
             font-size: $fontsize-mobile;
-            &:active + .fa-solid {
-                display: block;
-                background: -webkit-linear-gradient($primary-color, $secondary-color);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-            &:active {
-                opacity: 0;
-            }
         }
     }
+}
+
+@mixin flexbox($justify-content: center, $align-items: center, $flex-wrap: wrap) {
+    display: flex;
+    justify-content: $justify-content;
+    align-items: $align-items;
+    flex-wrap: $flex-wrap;
 }
