--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 /*Mixin for the disposition of logo in the header*/
 /*Mixin for the layout of the main button*/
 /*Mixin to put an ellipsis at the end of the text in the meal card when their is not enought space*/
+/*Mixin to setup positionnement of heart in mixin heart placement according to is location ie homepage or menupage*/
 /*Mixin related to the position of the 2 hearts on card restaurant on the main page and also on the menu page
 Solid one is hidden until user hover or active the regular one */
 /*animation that make the check mark rotate*/
@@ -308,10 +309,10 @@ it allow a flex disposition with wrap for the restaurant card and also allow to 
   top: 82%;
   right: 10px;
   font-size: 1.5rem;
-  z-index: 0;
   background: -webkit-linear-gradient(#9356dc, #ff79da);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  cursor: pointer;
 }
 @media (max-width: 620px) {
   .restaurant .fa-solid {
@@ -323,8 +324,6 @@ it allow a flex disposition with wrap for the restaurant card and also allow to 
   top: 82%;
   right: 10px;
   font-size: 1.5rem;
-  z-index: 1;
-  cursor: pointer;
 }
 @media (max-width: 620px) {
   .restaurant .fa-regular {
@@ -474,7 +473,7 @@ it allow a flex disposition with wrap for the restaurant card and also allow to 
 }
 
 /*This files contain SCSS rules to modify appearence of meal cards*/
-.menu__vignette {
+.menu__card {
   width: 60%;
   background-color: white;
   border-radius: 15px;
@@ -486,39 +485,39 @@ it allow a flex disposition with wrap for the restaurant card and also allow to 
   overflow: hidden;
   animation: card-apparition 1000ms ease-in-out both;
 }
-.menu__vignette:hover .menu__vignette__check {
+.menu__card:hover .menu__check {
   margin-right: 0;
 }
-.menu__vignette:hover .fa-check {
+.menu__card:hover .fa-check {
   animation: check-rotate 500ms ease-in-out 150ms;
 }
 @media (max-width: 620px) {
-  .menu__vignette {
+  .menu__card {
     width: 90%;
   }
-  .menu__vignette:active .menu__vignette__check {
+  .menu__card:active .menu__check {
     margin-right: 0;
   }
-  .menu__vignette:active .fa-check {
+  .menu__card:active .fa-check {
     animation: check-rotate 500ms ease-in-out 150ms;
   }
 }
-.menu__vignette__description {
+.menu__description {
   overflow: hidden;
   padding: 0.5rem 1rem;
   width: 90%;
 }
-.menu__vignette__description h3 {
+.menu__description h3 {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.menu__vignette__description p {
+.menu__description p {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.menu__vignette__prix {
+.menu__prix {
   padding: 0.5rem;
   display: flex;
   justify-content: flex-end;
@@ -526,7 +525,7 @@ it allow a flex disposition with wrap for the restaurant card and also allow to 
   flex-wrap: nowrap;
   margin-left: auto;
 }
-.menu__vignette__check {
+.menu__check {
   background-color: #99e2d0;
   width: 3rem;
   border-top-right-radius: 15px;
@@ -536,7 +535,7 @@ it allow a flex disposition with wrap for the restaurant card and also allow to 
   justify-content: center;
   transition: margin-right 500ms ease-in-out;
 }
-.menu__vignette__check .fa-check {
+.menu__check .fa-check {
   background-color: white;
   font-size: 0.8rem;
   padding: 0.3rem;
@@ -605,6 +604,7 @@ for the layout of the menu for each restaurant*/
   top: 50%;
   right: 10px;
   transform: translateY(-50%);
+  cursor: pointer;
   font-size: 4vw;
   z-index: 0;
   background: -webkit-linear-gradient(#9356dc, #ff79da);
