--- a/sass/composants/menuCard.scss
+++ b/sass/composants/menuCard.scss
@@ -1,8 +1,8 @@
 /*This files contain SCSS rules to modify appearence of meal cards*/
 
 .menu {
-    &__vignette {
-        width:60%;
+    &__card {
+        width: 60%;
         background-color: white;
         border-radius: 15px;
         box-shadow: 0 0 10px grey;
@@ -12,54 +12,54 @@
         justify-content: flex-start;
         overflow: hidden;
         animation: card-apparition 1000ms ease-in-out both;
-        &:hover .menu__vignette__check {
+        &:hover .menu__check {
             margin-right: 0;
         }
         &:hover .fa-check {
             animation: check-rotate 500ms ease-in-out 150ms;
         }
         @media (max-width: 620px) {
-            width:90%;
-            &:active .menu__vignette__check {
+            width: 90%;
+            &:active .menu__check {
                 margin-right: 0;
             }
             &:active .fa-check {
                 animation: check-rotate 500ms ease-in-out 150ms;
             }
         }
-        &__description {
-            overflow: hidden;
-            padding: 0.5rem 1rem;
-            width: 90%;
-            h3 {
-                @include hide-text;
-            }
-            p {
-                @include hide-text;
-            }
+    }
+    &__description {
+        overflow: hidden;
+        padding: 0.5rem 1rem;
+        width: 90%;
+        h3 {
+            @include hide-text;
         }
-        &__prix {
-            padding: 0.5rem;
-            @include flexbox(flex-end, flex-end, nowrap);
-            margin-left: auto;
+        p {
+            @include hide-text;
         }
-        &__check {
-            background-color: $ternary-color;
-            width: 3rem;
-            border-top-right-radius: 15px;
-            border-bottom-right-radius: 15px;
-            margin-right: -3rem;
-            display: flex;
-            justify-content: center;
-            transition: margin-right 500ms ease-in-out;
-            .fa-check {
-                background-color: white;
-                font-size: 0.8rem;
-                padding: 0.3rem;
-                border-radius: 50%;
-                color: $ternary-color;
-                margin: auto;
-            }
+    }
+    &__prix {
+        padding: 0.5rem;
+        @include flexbox(flex-end, flex-end, nowrap);
+        margin-left: auto;
+    }
+    &__check {
+        background-color: $ternary-color;
+        width: 3rem;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        margin-right: -3rem;
+        display: flex;
+        justify-content: center;
+        transition: margin-right 500ms ease-in-out;
+        .fa-check {
+            background-color: white;
+            font-size: 0.8rem;
+            padding: 0.3rem;
+            border-radius: 50%;
+            color: $ternary-color;
+            margin: auto;
         }
     }
 }
